loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:16: error: 'while' expected but '}' found.
	}
        ^